style: Given styling to heading

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <main>
       <div id="col-1">
-        <h1>Shruti M. Gawande</h1>
+        <h1 class="heading">Shruti M. Gawande</h1>
         <h3>
-          Programmer Analyst Trainee|Cognizant Technology solutions<small
+          Programmer Analyst Trainee|Cognizant Technology Solutions<small
             >(Currently)</small
           >
         </h3>
         <br />
-        <h2>EXPERIENCE</h2>
+        <h2 class="heading">EXPERIENCE</h2>
         <h3>Cognizant Technology Solutions-Engineer Trainee</h3>
         <small>Dec 2020-June 2021</small>
         <ul>
@@ -42,14 +42,14 @@
         <li>
           Added new functionality to e-Assist software used by Siemens PLM.
         </li>
-        <h2>EDUCATION</h2>
+        <h2 class="heading">EDUCATION</h2>
         <h3>Governent College Of Engineering,Amravati-B.Tech in IT(2020)</h3>
         CGPA-7.60
         <h3>STATE Board (Vidya Niketan Junior College),Chandrapur</h3>
         Class 12th Percentage-70.31 (2016)
         <h3>STATE Board (Dilasagram Convent High School), Ballarpur</h3>
         Class 10th Percentage-86.80% (2014)
-        <h2>PROJECTS</h2>
+        <h2 class="heading">PROJECTS</h2>
         <h3>Major Project</h3>
         <p>
           Data access security using facial landmarks detection. In this project
@@ -66,8 +66,8 @@
         <h4>
           Vidya Nagar Ward Near Milind Chawk Ballarpur-442701<br />9172516808<br />shrutigawande1998@gmail.com
         </h4>
-        <br /><br />
-        <h2>SKILLS</h2>
+        <br />
+        <h2 class="heading">SKILLS</h2>
         <ul>
           <li>HTML</li>
           <li>CSS</li>
@@ -77,13 +77,13 @@
           <li>SQL</li>
         </ul>
         <br />
-        <h2>ACHIEVEMENTS</h2>
+        <h2 class="heading">ACHIEVEMENTS</h2>
         <ul>
           <li>Mechatronics Training Certified by Siemens Berlin.</li>
           <li>Received Siemens Scholarship in 2016.</li>
         </ul>
         <br />
-        <h2>EXTRA Curricular Activities</h2>
+        <h2 class="heading">EXTRA Curricular Activities</h2>
         <ul>
           <li>Participated in inter- branch Badminton Competition-2018.</li>
           <li>Participated in Drama during the Cultural Night- 2018.</li>
@@ -92,7 +92,7 @@
           <li>Member of Googler Event (Technical Event).</li>
         </ul>
         <br />
-        <h2>HOBBIES</h2>
+        <h2 class="heading">HOBBIES</h2>
         <ul>
           <li>Driving Cars</li>
           <li>Reading Books</li>
@@ -100,7 +100,7 @@
           <li>Dancing</li>
         </ul>
         <br />
-        <h2>LANGUAGE</h2>
+        <h2 class="heading">LANGUAGE</h2>
         <li class="list inline-elements">English</li>
         <li class="list inline-elements">Hindi</li>
         <li class="list inline-elements">Marathi</li>
